# otus-vector-editor

./: CMakeLists.txt  editor_buttons.h  graphic_document.h  graphic_primitives.h  test_vector_editor.cpp  vector_editor.cpp  vector_editor.h
.github/workflows/: release.yml
editor_mvc/: editor_controller.cpp  editor_controller.h  editor_model.cpp  editor_model.h  editor_view.cpp  editor_view.h
